@@ -74,9 +74,11 @@ publicVariable "d_resolved_targets";
 sleep 0.5;
 d_public_points = false;
 __TRACE_1("","d_mt_winner")
+#endif
 d_num_barracks_tt = -1;
 publicVariable "d_num_barracks_tt";
-#endif
+d_num_barracks_objs = -1;
+publicVariable "d_num_barracks_objs";
 
 call d_fnc_dodelintelu;
 
